--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,14 @@ dependencyManagement {
 	}
 }
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.qoddi.trading.TradingApplication'
+		)
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
