--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,7 @@ dependencyManagement {
 
 jar {
 	manifest {
-		attributes(
-				'Main-Class': 'com.qoddi.trading.TradingApplication'
-		)
+		attributes 'Main-Class': 'com.qoddi.trading.TradingApplication'
 	}
 }
 
