--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.15'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version '3.1.3'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.qoddi'
+group = 'com.trading'
 version = '0.0.1-SNAPSHOT'
 
-
 java {
-	sourceCompatibility = '1.8'
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -20,21 +19,23 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
-	maven { url 'https://repo.spring.io/snapshot' }
 }
 
 ext {
-	set('springCloudVersion', "2021.0.8")
+	set('springCloudVersion', "2022.0.4")
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 dependencyManagement {
@@ -46,4 +47,3 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
