[FEAT] MYSQL REPLICATION 적용 전 기본 기능부터 구현 중간 commit - 전체 마켓코드 조회 - 각 마켓코드 조회 하여 Save

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+# url
 upbit:
   api:
     uri: 'https://api.upbit.com/v1'
+
+# schedule property
+schedule:
+  fixed:
+    delay:
+      upbit: 3000
