--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,12 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-//	implementation 'mysql:mysql-connector-java'
+	runtimeOnly 'com.h2database:h2'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	testImplementation 'org.springframework.security:spring-security-test'
