--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -47,6 +47,8 @@ jobs:
     - name: Generate deployment package
       run: |
         mkdir -p before-deploy
+        cp scripts/*.sh before-deploy/
+        cp appspec.yml before-deploy/
         cp build/libs/*.jar before-deploy/
         cd before-deploy
         zip -r before-deploy *
