--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-gson:0.11.5'
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
